# switchgrass

./: LICENSE  README.md  project_name_explanation.md  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md  calculator.py
src/switchgrass/: __init__.py  cli.py  test.py
